--- a/kmall/admin/src/App.css
+++ b/kmall/admin/src/App.css
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;
 }
-li{
+/*li{
 	list-style: none;
 	float: left;
 	margin-right: 10px;
@@ -11,4 +11,4 @@ li{
 .nav{
 	height: 40px;
 	margin-bottom: 20px;
-}
+}*/
